plugins {
    id 'fabric-loom' version '1.14.10'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    maven { url = 'https://api.modrinth.com/maven' }
    mavenCentral()
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    include "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    modCompileOnly "maven.modrinth:modmenu:${project.modmenu_version}"

    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

processResources {
    inputs.property "version", project.version
    inputs.property "minecraft_dependency", project.findProperty("minecraft_dependency") ?: project.minecraft_version

    filesMatching("fabric.mod.json") {
        expand(
                "version": project.version,
                "minecraft_dependency": project.findProperty("minecraft_dependency") ?: project.minecraft_version
        )
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
    it.options.encoding = "UTF-8"
}

java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

// Opt-in checks in an isolated game directory, excluded from release jars.
if (project.hasProperty('smokeTest')) {
    sourceSets {
        smoke {
            compileClasspath += sourceSets.main.compileClasspath + sourceSets.main.output
            runtimeClasspath += sourceSets.main.runtimeClasspath + sourceSets.main.output
        }
    }
    loom.mods {
        smoke { sourceSet sourceSets.smoke }
    }
    tasks.named('runClient') {
        if (project.hasProperty('smokeJavaExecutable')) {
            executable = project.property('smokeJavaExecutable')
        }
        dependsOn tasks.named('smokeClasses')
        classpath += sourceSets.smoke.output
        environment 'APPDATA', file('build/smoke-appdata').absolutePath
        jvmArgs '-Duser.home=' + file('build/smoke-home').absolutePath
    }
}
